--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -4,8 +4,23 @@
   	<p class="text-center">
   		<img src="" class="img-responsive, center-block">
   	</p>
+  	
+  	
 
   	<p class="text-center">
+  		
+<div id="stadium">
+
+<div id="seats">
+
+<div id="feild">
+
+<div id="end-zone-home">
+<h1>HOME TEAM</h1>
+<div id="proActive-logo">
+</div><!-- end proActive-logo -->
+</div><!-- end end-zone-home -->
+  		
 
       <div id="yards">
   <ul>
@@ -176,6 +191,17 @@
 				</p>
         </div>
   </div>
+  
+  <div id="end-zone-visitors">
+<h1>AWAY TEAM</h1>
+</div><!-- end end end-zone-vistors-->
+
+
+</div><!-- end feild -->
+
+</div><!-- end seats -->
+
+</div><!-- end of stadium -->
 
 
 </section>
