--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,5 +1,5 @@
 <section class="row md-whiteframe-z1 " ng-controller="Home">
-  <div class="text-center" style="padding:33px" ng-hide="showTeam1==1 || showTeam2==1 || showStats==1">
+  <div class="text-center" style="padding:33px" ng-hide="showTeam1==1 || showTeam2==1 || showStats==1 || showMyStats==1">
   	
   	<p class="text-center">
   		<img src="" class="img-responsive, center-block">
@@ -18,6 +18,15 @@
       </md-button>
 
   	</p>
+
+    <p class="text-center">
+      <md-button aria-label="select team" class="btn-width-medium md-raised md-warning" ng-click="showMyStats=1">
+        <md-icon md-svg-src="dist/img/icons/ic_grade_24px.svg">
+        </md-icon> My Stats
+      </md-button>
+
+    </p>
+
   </div>
 
   <div class="text-center" style="padding:33px" ng-show="showTeam1==1">
@@ -154,6 +163,85 @@
             </div>
         <p>
             <md-button aria-label="select team" class="btn-width-medium md-raised md-default" ng-click="back()">
+              <md-icon md-svg-src="dist/img/icons/ic_keyboard_backspace_24px.svg">
+              </md-icon> Back
+            </md-button>
+
+        </p>
+
+
+        </div>
+
+
+
+  </div>
+
+    <div class="text-center" style="padding:33px; margin-bottom:33px" ng-show="showMyStats==1">
+
+        <div class="col-md-6 col-md-offset-3" style="margin-bottom:33px">
+            <div class="md-whiteframe-z1">
+              <md-toolbar class="md-primary md-theme-default md-whiteframe-z1">
+                <div class="md-toolbar-tools">
+                  <h3>My Stats</h3>
+                  <span class="flex"></span>
+
+                </div>
+              </md-toolbar>
+              <md-content>
+                <div class="md-content__body">
+                  <div class="row text-center">
+
+                    <div class="row">
+                      <div class="table-responsive">
+                        
+                        <table class="table table-striped table-bordered">
+                          <thead>
+                          <tr>
+                            <th style="text-align:center">Vs</th>
+                            <th style="text-align:center">Team</th>
+                            <th style="text-align:center">Time</th>
+                            <th style="text-align:center">Route</th>
+                          </tr>
+                          </thead>
+                          <tbody>
+                          <tr>
+                          <td style="text-align:center">18 Josh Johnson (WR)</td>
+                            <td style="text-align:center">Amsterdam Admirals</td>
+                            <td style="text-align:center">.04</td>
+                            <td style="text-align:center"><a href > View </a></td>
+
+                          </tr>
+                          <tr>
+                          <td style="text-align:center">15 Mike Colledge (WR)</td>
+                            <td style="text-align:center">Amsterdam Admirals</td>
+                            <td style="text-align:center">.033</td>
+                            <td style="text-align:center"><a href > View </a></td>
+
+                          </tr>
+                          <tr>
+                          <td style="text-align:center">10 Phil Lee (WR)</td>
+                            <td style="text-align:center">Amsterdam Admirals</td>
+                            <td style="text-align:center">.068</td>
+                            <td style="text-align:center"><a href > View </a></td>
+
+                          </tr>
+                          <tr>
+                          <td style="text-align:center">89 Joe Jefferson (WR)</td>
+                            <td style="text-align:center">Amsterdam Admirals</td>
+                            <td style="text-align:center">.0234</td>
+                            <td style="text-align:center"><a href > View </a></td>
+
+                          </tr>
+                          </tbody>
+                        </table>
+
+                    </div>
+                  </div>
+                </div>
+              </md-content>
+            </div>
+        <p>
+            <md-button aria-label="select team" class="btn-width-medium md-raised md-default" ng-click="showMyStats=0">
               <md-icon md-svg-src="dist/img/icons/ic_keyboard_backspace_24px.svg">
               </md-icon> Back
             </md-button>
